operations/manifests/production/westeurope/monitoring/manifests/prometheus-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
spec:
  gateways:
  - istio-system/istio-ingressgw
  hosts:
  - prometheus.production.euw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 9090
        host: prometheus-operated.observability.svc.cluster.local
